--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .dark {
   background-color: rgb(47, 47, 47);
   color: white;
-}/*# sourceMappingURL=App.css.map */
+}
 
 img{
   border-radius: 10px;
@@ -14,10 +14,9 @@ img{
   justify-content: center;
   align-items: center;
 }
-body{
-  background-color: #000;
-}
+
 .Loader{
+  // background-color: #000;
   .Prog{
     margin-left: 30px;
   }
