--- a/src/style/Compare.css
+++ b/src/style/Compare.css
@@ -59,8 +59,6 @@
   margin: auto;
 }
 .Compare Table .Remove {
-  position: relative;
-  left: 400px;
   padding: 5px 10px;
   font-weight: bold;
   letter-spacing: 2px;
@@ -71,6 +69,10 @@
   border-radius: 5px;
   cursor: pointer;
   margin: 20px 0;
+}
+.Compare Table .Remove:hover {
+  background-color: rgb(206, 1, 1);
+  transition: all ease-in 0.1s;
 }
 .Compare Table .product-details {
   padding: 10px;
