--- a/src/style/Favor.scss
+++ b/src/style/Favor.scss
@@ -80,6 +80,10 @@ article{
     background-color: $primeColor;
     border-radius: 5px;
     cursor: pointer;
+    &:hover{
+        background-color: rgb(206, 1, 1);
+        transition: all ease-in .1s;
+    }
 }
 .cart_box div:nth-child(3) button:hover{
     opacity: .9;
