--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -75,6 +75,10 @@ article {
   border-radius: 5px;
   cursor: pointer;
 }
+.cart_box div:nth-child(3) button:hover {
+  background-color: rgb(206, 1, 1);
+  transition: all ease-in 0.1s;
+}
 
 .cart_box div:nth-child(3) button:hover {
   opacity: 0.9;
