--- a/src/style/Payment.scss
+++ b/src/style/Payment.scss
@@ -42,3 +42,11 @@ $fifthColor:#ffbb00;
     }
   }
 }
+.Google_pay{
+  display: flex;
+  justify-content: center;
+  .Google_btn{
+    height: 60px;
+    
+  }
+}
