--- a/src/style/Payment.scss
+++ b/src/style/Payment.scss
@@ -50,3 +50,35 @@ $fifthColor:#ffbb00;
     
   }
 }
+
+.gpay-card-info-container{
+    width: 400px;
+  }
+
+@media  (max-width:678px) {
+  .wrapper{
+    width: 90%;
+  }
+  .gpay-card-info-container{
+    width: 90%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+}
+
+}
+@media  (max-width:420px) {
+  .Payment{
+    padding-top: 85px;
+  }
+  .wrapper{
+    width: 100%;
+    height: 90vh;
+  }
+  .gpay-card-info-container{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+}
+
+}
