--- a/src/style/Slide.css
+++ b/src/style/Slide.css
@@ -5,7 +5,7 @@
 .swiper {
   width: 100%;
   height: 100%;
-  border-radius: 250px;
+  border-radius: 10px;
 }
 
 .swiper-slide {
@@ -19,10 +19,10 @@
 
 .swiper-slide img {
   border: #ffbb00 3px solid;
-  border-radius: 250px;
+  border-radius: 10px;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 80vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -33,7 +33,7 @@
   }
 }
 .mini_banner {
-  padding-top: 90px;
+  padding-top: 20px;
 }
 .mini_banner .mini {
   margin-top: 50px;
