--- a/src/style/Slide.scss
+++ b/src/style/Slide.scss
@@ -15,7 +15,7 @@ $primeFont : 1.2rem;
 .swiper {
     width: 100%;
     height: 100%;
-    border-radius: 250px;
+    border-radius: 10px;
 }
 
 .swiper-slide {
@@ -29,10 +29,10 @@ $primeFont : 1.2rem;
 
 .swiper-slide img {
     border: $fifthColor 3px solid;
-    border-radius: 250px;
+    border-radius: 10px;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     object-fit: cover;
 }
     
@@ -45,7 +45,7 @@ $primeFont : 1.2rem;
 }
 
 .mini_banner{
-    padding-top: 90px;
+    padding-top: 20px;
     .mini{
         margin-top: 50px;
     }
